Fixed text alignment

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -48,7 +48,6 @@ h1 {
 	
 .main-content{
 	z-index:-2;
-	text-align: center;
 	position:absolute;
 	width:100%;
 	top:100vh;
@@ -62,7 +61,6 @@ h1 {
 
 .section-title{
 	padding-left:120px;
-	text-align:center;
 	display:inline-cell;
 	float:left;
 	clear:both;
